[gd_scene load_steps=50 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://freeSprites/3 Man/Man_walk.png" type="Texture" id=2]
[ext_resource path="res://freeSprites/3 Man/Man_idle.png" type="Texture" id=3]
[ext_resource path="res://freeSprites/3 Man/Man_attack.png" type="Texture" id=4]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://freeSprites/6 Girl/Girl_death.png" type="Texture" id=6]
[ext_resource path="res://handHitbox.gd" type="Script" id=7]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music and Sounds/Hit.wav" type="AudioStream" id=9]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=10]
[ext_resource path="res://WhiteColorShader.tres" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=35]
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=36]
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=37]
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxpivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite4:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=27]
resource_name = "Roll"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "rollEnd"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=20]
resource_name = "attac"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackEnd"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxpivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxpivot/swordhitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=9]
blend_point_0/node = SubResource( 5 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 6 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 7 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 8 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 16 )
blend_point_4/pos = Vector2( -1, 0 )
blend_point_5/node = SubResource( 17 )
blend_point_5/pos = Vector2( 0, -1.1 )
blend_point_6/node = SubResource( 18 )
blend_point_6/pos = Vector2( 0, 1.1 )
blend_point_7/node = SubResource( 19 )
blend_point_7/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Roll"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attac"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "run_right"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=10]
states/BlendSpace2D/node = SubResource( 9 )
states/BlendSpace2D/position = Vector2( 180, 85 )
states/Roll/node = SubResource( 28 )
states/Roll/position = Vector2( 607, -32 )
states/attac/node = SubResource( 21 )
states/attac/position = Vector2( 607, 215 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 607, 92 )
states/run_right/node = SubResource( 13 )
states/run_right/position = Vector2( 846, 97 )
transitions = [ "run_right", "idle", SubResource( 14 ), "idle", "run_right", SubResource( 15 ), "idle", "attac", SubResource( 22 ), "attac", "idle", SubResource( 23 ), "attac", "run_right", SubResource( 24 ), "run_right", "attac", SubResource( 25 ), "Roll", "idle", SubResource( 29 ), "idle", "Roll", SubResource( 30 ) ]
start_node = "BlendSpace2D"
graph_offset = Vector2( 0, -60.6417 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="CapsuleShape2D" id=26]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=31]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=33]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=34]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 32 )
position = Vector2( 0, -6 )
scale = Vector2( 0.458333, 0.458333 )
texture = ExtResource( 2 )
offset = Vector2( 10, -1 )
hframes = 6
frame = 1

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 35 )
position = Vector2( 5, -7 )
scale = Vector2( 0.458, 0.458167 )
texture = ExtResource( 3 )
hframes = 4

[node name="Sprite3" type="Sprite" parent="."]
material = SubResource( 36 )
position = Vector2( 5, -3 )
scale = Vector2( 0.458, 0.458 )
texture = ExtResource( 4 )
offset = Vector2( 0, -10 )
hframes = 4
frame = 3

[node name="Sprite4" type="Sprite" parent="."]
material = SubResource( 37 )
position = Vector2( 5.5, -7 )
scale = Vector2( 0.458, 0.458 )
texture = ExtResource( 6 )
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 2 )
anims/Roll = SubResource( 27 )
anims/attac = SubResource( 20 )
anims/idle = SubResource( 3 )
anims/run_right = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 11 )
parameters/BlendSpace2D/blend_position = Vector2( 0, 1 )

[node name="hitboxpivot" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -7 )

[node name="swordhitbox" parent="hitboxpivot" instance=ExtResource( 5 )]
position = Vector2( 5, 0 )
collision_mask = 8
script = ExtResource( 7 )

[node name="CollisionShape2D" parent="hitboxpivot/swordhitbox" index="0"]
shape = SubResource( 26 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 31 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 38 )
anims/Start = SubResource( 33 )
anims/Stop = SubResource( 34 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="hitboxpivot/swordhitbox"]
[editable path="Hurtbox"]
